# ai-prj-streamlit

./: .gitignore  1_🐧_Homepage.py  lista_demo.py  pyproject.toml  setup.py  update.sh
.space/: akashi.dev.devfile.yaml
.streamlit/: config.toml
info/: authors.py  config_page.py  intro.py  load_files.py
pages/: 1_001_🌹_Flowers_recong.py  2_🎉_Others.py  3_🎏_about.py
